[package]
name = "unreal_asset_base"
version.workspace = true
authors.workspace = true
description = "Base unreal_asset implementations"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unreal_asset_base"
edition = "2021"

[dependencies]
unreal_asset_proc_macro.workspace = true

unreal_helpers.workspace = true
unreal_helpers.features = ["bitvec", "guid", "path", "read_write"]

# containers/indexed_map
rustc-hash = "1.1.0"
slab = "0.4.8"

# compression
brotli = { version = "3.3.4", optional = true }
flate2 = { version = "1.0.26", optional = true }
lz4_flex = { version = "0.11.1", features = [
    "safe-decode",
    "safe-encode",
    "std",
], default-features = false, optional = true }
zstd = { version = "0.12.4", optional = true }

naive-cityhash = "0.2.0"
ordered-float.workspace = true

num_enum.workspace = true
thiserror.workspace = true
byteorder.workspace = true
lazy_static.workspace = true
bitvec.workspace = true
bitflags.workspace = true
enum_dispatch.workspace = true

[features]
oodle = []
brotli = ["dep:brotli"]
flate2 = ["dep:flate2"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd"]
